samples/_failures_safe/1761354906_833ad3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad506bfd.c: In function ‘main’:
./samples/SAFE/__tmp_ad506bfd.c:135:9: error: expected expression at end of input
  135 |         {
      |         ^
./samples/SAFE/__tmp_ad506bfd.c:135:9: error: expected declaration or statement at end of input
